--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <table style="text-align: left;width: 100%;padding: 5px;" id="professionalExpTable">
+                <table id="professionalExpTable" style="text-align: left;width: 100%;padding: 5px;">
                     <thead>
                         <tr>
                             <th>Company</th>
@@ -438,5 +438,4 @@
         </div>
     </div>
 </body>
-
 </html>
